In middle of cleaning controller

--- a/WeatherByIp/appsettings.json
+++ b/WeatherByIp/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "WeatherByIpData": "Data Source=..\\WeatherByIp.Data\\AppData\\WeatherByIpDB.db"
+  },
+  "LocationApiUrl": "https://ipinfo.io",
+  "WeatherApiUrl": "https://api.open-meteo.com",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
