--- a/WeatherByIp.Online/WeatherByIp.Online.csproj
+++ b/WeatherByIp.Online/WeatherByIp.Online.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Refit" Version="6.3.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WeatherByIp.Core\WeatherByIp.Core.csproj" />
-    <ProjectReference Include="..\WeatherByIp.Data\WeatherByIp.Data.csproj" />
-    <ProjectReference Include="..\WeatherByIp.Online\WeatherByIp.Online.csproj" />
   </ItemGroup>
 
 </Project>
