--- a/WeatherByIp.Tests/WeatherByIp.Tests.csproj
+++ b/WeatherByIp.Tests/WeatherByIp.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -11,9 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-    <PackageReference Include="MockQueryable.Moq" Version="7.0.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.0" />
@@ -24,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\WeatherByIp.Online\WeatherByIp.Online.csproj" />
     <ProjectReference Include="..\WeatherByIp.Services\WeatherByIp.Services.csproj" />
+    <ProjectReference Include="..\WeatherByIp\WeatherByIp.csproj" />
   </ItemGroup>
 
 </Project>
