--- a/WeatherByIp/appsettings.json
+++ b/WeatherByIp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WeatherByIpData": "Data Source=..\\WeatherByIp.Data\\AppData\\WeatherByIpDB.db"
+    "WeatherByIpData": "Data Source=.\\AppData\\WeatherByIpDB.db"
   },
   "LocationApiUrl": "https://ipinfo.io",
   "WeatherApiUrl": "https://api.open-meteo.com",
